--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "next": "15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
