--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "firebase": "^11.6.0",
     "next": "15.2.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
