all employee edit

--- a/firebase.json
+++ b/firebase.json
@@ -2,11 +2,7 @@
   "hosting": {
     "source": ".",
     "target": "b2vportal",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "frameworksBackend": {
       "region": "asia-east1"
     }
