--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "next": "15.2.2",
@@ -21,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
@@ -29,6 +32,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/xlsx": "^0.0.35",
     "tailwindcss": "^4.0.14",
     "typescript": "^5"
   }
