--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "dayjs": "^1.11.13",
     "firebase": "^11.6.0",
     "next": "15.2.2",
+    "opencage-api-client": "^1.1.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1",
     "zod": "^3.24.2"
   },
