--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "exceljs": "^4.4.0",
     "firebase": "^11.6.0",
     "next": "15.2.2",
     "opencage-api-client": "^1.1.0",
