--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^7.0.3",
     "opencage-api-client": "^1.1.0",
     "postcss": "^8.5.3",
+    "print-js": "^1.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
